# haymaker-workload-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  workload.yaml
.github/workflows/: ci.yml  deploy.yml  pages.yml
docs/: Gemfile  _config.yml  advanced.md  architecture.md  deploy.md  index.md  tutorial.md
docs/_sass/custom/: custom.scss
goals/: example-data-collector.md  example-file-organizer.md  example-with-memory.md
infra/: main.bicep
output/: execution-plan.md  file-report.md
scripts/: e2e-test.sh  setup-oidc.sh
src/haymaker_my_workload/: __init__.py  workload.py
tests/: test_workload.py
